# dmpbbo

./: .gitignore  CMakeLists.txt  README.md
src/: test
src/dmp/: Dmp.cpp  Dmp.cpp~  Dmp.hpp  Trajectory.cpp  Trajectory.cpp~  Trajectory.hpp
src/dmp/demos/: CMakeLists.txt  demoDmp.cpp  demoDmpChangeGoal.py  demoDmpContextual.cpp  demoDmpContextual.cpp~  demoDmpContextualGoal.cpp  demoDmpForRobot.cpp  demoDmpTrainFromTrajectoryFile.cpp  demoDmpTrainFromTrajectoryFile.cpp~  testChangeGoal.cpp
src/dmp_bbo/: runEvolutionaryOptimizationParallel.cpp~
src/dmp_bbo/demos/: CMakeLists.txt  CMakeLists.txt~  init.cpp  opt.cpp
src/dynamicalsystems/: DynamicalSystem.hpp  SigmoidSystem.cpp
src/functionapproximators/: ModelParametersGMR.cpp  ModelParametersLWR.cpp  Parameterizable.cpp  Parameterizable.hpp  UnifiedModel.cpp  UnifiedModel.hpp
